Including new link to a live demo

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="well">
             <blockquote class="poh-cite">
                 <p>
-                    “It’s [her home] your sanctuary, a safe space. You should be proud of your living situation”
+                    â€œItâ€™s [her home] your sanctuary, a safe space. You should be proud of your living situationâ€
                     <footer>
                         -- Khadiija Sayaadi on <cite title="TO Prosperity:
 Toronto Poverty Reduction Strategy">
@@ -69,7 +69,7 @@ Toronto Poverty Reduction Strategy">
         <div class="well">
             <blockquote class="poh-cite">
                 <p>
-                    “The unit was infected with red ants […] I had to re-register, and I have been on the waiting list again since 2012.”
+                    â€œThe unit was infected with red ants [â€¦] I had to re-register, and I have been on the waiting list again since 2012.â€
                     <footer><cite>-- C Jasz on torontoist.com website.</cite></footer>
                 </p>
             </blockquote>
@@ -112,7 +112,7 @@ Toronto Poverty Reduction Strategy">
                 <blockquote>
                     <h4 class="poh-method">Presentation & Prototype</h4>
                     <h5>Material shared in TPL Hackathon event. </h5>
-                    <a href="http://onclickmidia.net/toprosperity/">Here</a> | <a href="https://github.com/leoneloliver/TPLHackathon2016" target="_blank">GitHub</a>
+                    <a href="http://onclickmidia.net/toprosperity/">Here</a> | <a href="https://github.com/leoneloliver/TPLHackathon2016" target="_blank">GitHub</a> | <a href="http://onclickmidia.net/library/">Live Demo</a>
                 </blockquote>
             </div>
 
